--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             alt="icon-star"
             class="wrapper__faq-icon"
           />
-          <h1 class="wrapper__faq-title">FAQss</h1>
+          <h1 class="wrapper__faq-title">FAQs</h1>
         </div>
 
         <ul class="wrapper__faq-accordion">
